--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100 h-screen flex flex-col items-center p-2 sm:p-4">
 
   <!-- Main Chat Container -->
-  <div class="w-full max-w-xl bg-white rounded-md shadow-md flex flex-col h-full sm:h-[90vh] p-4 sm:p-6">
+  <div class="w-full max-w-xl bg-white rounded-md shadow-md flex flex-col h-[90vh] sm:h-[calc(100vh-2rem)] p-4 sm:p-6">
 
     <!-- Header -->
     <div class="flex justify-between items-center mb-4">
